--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,6 +1,42 @@
 {% extends 'base.html' %}
 
  {% block content %}
+ <style>
+    table{
+        border: 1px solid;
+        border-collapse: collapse;
+        width: 80%;
+        margin: 15px auto;
+    }
+
+    th{
+        border: 1px solid darkgoldenrod;
+        background-color: rgb(162, 160, 120);
+    }
+
+    td{
+        padding: 15px;
+        border: 1px solid rgb(109, 108, 106);
+        font-family: 'Lucida Handwriting';
+        background-color: beige;
+        text-align: left;
+    }
+
+    button{
+      margin-right: 10px;
+    }
+
+    h4{
+      text-align: center;
+    }
+    
+    .center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+    }
+ </style>
 
   <h1>Lab 3 Assignment PBP/PBD</h1>
 
@@ -10,8 +46,7 @@
   <h5>Student ID: </h5>
   <p>{{npm}}</p>
 
-  <h2>Username: </h2>
-  <h5>{{user}}</h5>
+  <h4>Username: {{user}}</h4>
 
   <table>
     <tr>
@@ -19,34 +54,40 @@
       <th>Judul Tugas</th>
       <th>Deskripsi Tugas</th>
       <th>Selesai/Belum Selesai</th>
+      <th>Ubah Status</th>
+      <th>Delete Status</th>
     </tr>
     {% comment %} Add the data below this line {% endcomment %}
     {% for task in list_task %}
     <tr>
-        <th>{{task.date}}</th>
-        <th>{{task.title}}</th>
-        <th>{{task.description}}</th>
+        <td>{{task.date}}</td>
+        <td>{{task.title}}</td>
+        <td>{{task.description}}</td>
         {% if task.is_finished %}
-          <th>Selesai</th>
+          <td>Selesai</td>
         {% else %}
-          <th>Belum Selesai</th>
+          <td>Belum Selesai</td>
         {% endif %}
           <form method="POST" action="{% url 'todolist:change_status' %}">  
-            {% csrf_token %}  
+            {% csrf_token %}
               <input type="hidden" value="{{task.id}}" name="task_id">
               <td><input type="submit" value="Ubah" /></td>
           </form>
-        <td>
           <form method="POST" action="{% url 'todolist:delete_status' %}">
             {% csrf_token %}  
             <input type="hidden" value="{{task.id}}" name="task_id">
-            <input type="submit" value="Delete"></button>
+            <td><input type="submit" value="Delete"></button></td>
           </form>
-        </td>
     </tr>
     {% endfor %}
   </table>
-  <button><a href="{% url 'todolist:logout' %}">Logout</a></button>
-  <button><a href="{% url 'todolist:addTask' %}">Tambah Task</a></button>
+
+  <div class="container">
+    <div class="center">
+      <button><a href="{% url 'todolist:logout' %}">Logout</a></button>
+      <button><a href="{% url 'todolist:addTask' %}">Tambah Task</a></button>
+      <button><a href="{% url 'todolist:show_cards' %}">Lihat dalam Cards</a></button>
+    </div>
+  </div>
 
  {% endblock content %}
