--- a/todolist/templates/todolist_ajax.html
+++ b/todolist/templates/todolist_ajax.html
@@ -25,12 +25,17 @@
       width: 30%;
     }
 
-    #tombol_ubah, #tombol-delete{
+    #tombol-ubah, #tombol-delete{
       width: 60%;
       margin: 10px;
       background-color: #a8e6cf;
       border-color: #dcedc1;
       box-shadow: 0 4px 13px 0 rgba(0,0,0,0.2);
+    }
+
+    .link{
+      color: black;
+      text-decoration: none;
     }
 
     button{
@@ -98,16 +103,12 @@
           <p>${item.fields.description}</p>
           <h4>Status</h4>
           ${item.fields.is_finished ? "<p>Selesai</p>" : "<p>Belum Selesai</p>"}
-              <form method="POST" action="{% url 'todolist:change_status_cards' %}">  
-          {% csrf_token %}
-              <input type="hidden" value=${item.pk} name="task_id">
-              <p><input id = "tombol_ubah" type="submit" value="Ubah" /></p>
-          </form>
-          <form method="POST" action="{% url 'todolist:delete_status_cards' %}">
-              {% csrf_token %}  
-              <input type="hidden" value=${item.pk} name="task_id">
-              <input id = "tombol-delete" type="submit" value="Delete"></button>
-            </form>
+          <button type="button" id="tombol-ubah">
+              <a class="link" onclick="changeStatus(${item.pk})">Ubah</a>
+          </button>
+          <button type="button" id="tombol-delete">
+              <a class="link" onclick="deleteTask(${item.pk})">Delete</a>
+          </button>
         </div>
       </div>
       `
@@ -122,7 +123,17 @@
       }).then(refreshTodolist)
     return false
   }
-  
+
+  async function deleteTask(id) {
+    let url = "/todolist/json/delete/" + id;
+    fetch(url).then(refreshTodolist)
+  }
+
+  async function changeStatus(id) {
+    let url = "/todolist/json/change-status/" + id;
+    fetch(url).then(refreshTodolist)
+  }
+
   document.getElementById("addtaskbutton").onclick = addTask
   refreshTodolist()
 
